Изменил структуру каталогов и файлов, исправил код
Добавил папку с исходниками, переименовал названия файлов.

Был изменен код, теперь все виджеты и слоты объявлены и реализованы в исходном коде.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,5 @@
 cmake_minimum_required(VERSION 3.10.0 FATAL_ERROR)
 
-project(home_bookkeeping LANGUAGES CXX)
+project(test)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-find_package(Qt5 REQUIRED COMPONENTS Core Widgets Gui)
-
-set(project_ui
-	aboutwindow.ui
-	instructionwindow.ui
-    mainwindow.ui)
-
-set(project_headers
-	aboutwindow.h
-	instructionwindow.h
-    mainwindow.h)
-
-set(project_sources 
-    main.cpp
-	aboutwindow.cpp
-	instructionwindow.cpp
-    mainwindow.cpp)
-
-qt5_wrap_ui(project_headers_wrapped ${project_ui})
-qt5_wrap_cpp(project_sources_moc ${project_headers})
-
-add_executable(${PROJECT_NAME} ${project_headers} ${project_sources} 
-    ${project_sources_moc} ${project_headers_wrapped})
-
-target_link_libraries(${PROJECT_NAME} 
-    PUBLIC 
-    Qt5::Core
-    Qt5::Gui
-    Qt5::Widgets)
+add_subdirectory(src)
