Исправил label'ы и добавил виджет day_info
Теперь некоторый лейблы отображаются так как надо.
Виджет day_info нужен для взаимодействия с окном редактирования доходов/расходов.
Окно доходов/расходов теперь содержит в себе несколько виджетов для отображения информации.
Так же был добавлен calendar_info, он сохраняет информацию о текущем месяце в главном окне.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,8 @@ find_package(Qt5 REQUIRED COMPONENTS Core Widgets Gui)
 
 set(project_headers
 	about_window.h
+	calendar_info.h
+	day_info.h
 	instruction_window.h
 	clickable_label.h
 	dayinfo_window.h
@@ -16,6 +18,8 @@ set(project_headers
 set(project_sources 
     main.cpp
 	about_window.cpp
+	calendar_info.cpp
+	day_info.cpp
 	dayinfo_window.cpp
 	clickable_label.cpp
 	instruction_window.cpp
