Реализовал виджеты окна в разных классах
Создал три класса:
CalendarMenu, класс реализующий основное окно с календарем.
LoginMenu, класс логин
RegistrationMenu класс регистрации
Исправил несколько недочетов.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,19 +8,25 @@ find_package(Qt5 REQUIRED COMPONENTS Core Widgets Gui Sql)
 
 set(project_headers
 	src/about_window.h
+	src/calendar_menu.h
 	src/dayinfo.h
 	src/dayinfo_label.h
 	src/connector_data.h
 	src/instruction_window.h
+	src/login_menu.h
+	src/registration_menu.h
 	src/dayinfo_window.h
     src/main_window.h)
 
 set(project_sources 
     src/main.cpp
 	src/about_window.cpp
+	src/calendar_menu.cpp
 	src/dayinfo.cpp
 	src/dayinfo_label.cpp
 	src/connector_data.cpp
+	src/login_menu.cpp
+	src/registration_menu.cpp
 	src/dayinfo_window.cpp
 	src/instruction_window.cpp
     src/main_window.cpp)
